ros2_ws/log/build_2024-08-11_18-11-01/serial_communicator/stdout_stderr.log
[ 50%] Building CXX object CMakeFiles/serial_node.dir/src/serial_node.cpp.o
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:78:74: error: use of undeclared identifier 'length'
        RCLCPP_INFO(rclcpp::get_logger("SerialNode"), "Reading started", length);
                                                                         ^
1 error generated.
make[2]: *** [CMakeFiles/serial_node.dir/build.make:76: CMakeFiles/serial_node.dir/src/serial_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/serial_node.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
